# longest-word

./: README.md  app.yaml  pyproject.toml  requirements.txt  wsgi.py
longest_word/: game.py
static/: style.css
templates/: check.html
tests/: test_game.py
