[tool.poetry]
name = "longest-word"
version = "0.1.0"
description = ""
authors = ["badr ben mbarek <badr.benb@gmail.com>"]
readme = "README.md"
packages = [{include = "longest_word"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.0"
pylint = "^2.15.9"
colorama = "^0.4.6"
autoflake = "^2.0.0"
requests = "^2.28.1"
flask = "^2.2.2"
flask-session = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
